Initial theme reset
Based-off of the DCDC Course Builder, _s & bootstrap

--- a/inc/less/bedrock-bootstrap.less
+++ b/inc/less/bedrock-bootstrap.less
@@ -33,7 +33,7 @@
 // Components: Buttons & Alerts
 @import "../bootstrap/less/buttons.less";
 @import "../bootstrap/less/button-groups.less";
-@import "../add-ons/less/alerts.less";
+@import "../bootstrap/less/alerts.less";
 
 // Components: Popovers;
 @import "../bootstrap/less/popovers.less";
