--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -1,612 +1,1 @@
-	/*!
- * Site Specific Styles 1.0
- * By: JKH
- *
- * Place all your custom CSS here.
- */
-
-// Pull in bootstrap mixins/custom-conventions to use in custom styles
-@import "dcdcBootstrap.less";
-
-// If navbar is static on top
-@media (min-width: @navbarCollapseWidth) {
-	body { padding-top: 0;}
-	#main { padding-top: 60px; }
-}
-
-//http://stackoverflow.com/questions/9906571/semantic-grid-with-bootstrap-less-mixins-how
-//#grid > .core > .span(5);
-
-// Design Team Style API
-
-// Test Beige: #FFE5C0;
-// Test DarkGreen:;
-// Test LightGreen:;
-
-
-@DCDCprimaryColor:"";
-@DCDCsecondaryColor:"";
-@DCDCtertiaryColor:"";
-@DCDCbannerColor:""; // Optional
-
-/**
- * Core Template Styles
- */
-
-h1.site-title a:visited { color: @grayLighter; }
-hr { clear: both; }
-.helper-text {
-	a,
-	a:link,
-	a:visited {
-		color: @linkColor;
-		text-decoration: underline;
-	}
-}
-.breadcrumb a { color: @linkColor; }
-.crumbSpacer { margin: 0 10px; color: @gray; }
-body > img.full-background-image {
-	/* Set rules to fill background */
-	min-height: 100%;
-	min-width: 1024px;
-	
-	/* Set up proportionate scaling */
-	width: 100%;
-	height: auto;
-	
-	/* Set up positioning */
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: -9;
-}
-.alert.container {
-	box-sizing:border-box;
-	-moz-box-sizing:border-box; /* Firefox */
-	-webkit-box-sizing:border-box; /* Safari */
-}
-
-// http://www.cssstickyfooter.com/using-sticky-footer-code.html
-html, body { height: 100%; margin-top: 0 !important; }
-#page { min-height: 100% }
-#main { padding-bottom: 71px; /* Must be the same height as the footer */ }
-footer#colophon { position: relative; margin-top: -71px; height: 70px; clear: both; }
-/* Opera Fix */ //body:before { content: ""; height: 100%; float: left; width: 0; margin-top: -32767; }
-
-header#navbar { 
-	#mixin > .shadow(0 0 8px 1px, #111, false);
-	.btn-primary { padding: 2px 14px; margin-top: 7px; } // "Add a Menu!" button
-	.navbar-inner {
-		border: none;
-		.site-affiliation {
-			.site-logo { background: url('../images/uh-logo.png') no-repeat; width: 45px; height: 40px; }
-			width: 45px;
-			height: 40px;
-			float: left;
-			margin: 0 15px 0 0;
-			&[data-affil=default] { background-color: @grayDark; }
-			&[data-affil=system] { #mixin > .gradient(#C7B07B, #B3995D, '../images/gradient-bg-system.png'); a, h2 { color: @white; } }
-			&[data-affil=manoa] { #mixin > .gradient(#2F663F, #0F4D2F, '../images/gradient-bg-manoa.png'); a, h2 { color: @white; } }
-			&[data-affil=hcc] { #mixin > .gradient(#3D8893, #016A7A, '../images/gradient-bg-hcc.png'); a, h2 { color: @white; }  }
-			&[data-affil=kcc] { /* Nothing for now */ }
-		}
-	
-		nav {
-			//&.nav-collapse.in .nav { float: none; }
-			.nav {
-				margin: 0; 
-			}
-			ul.dropdown-menu a { color: @grayDark; &:hover { color: @white; } }
-			a.empty-top-nav { color: @white; }
-			.caret { border-top: 4px solid @white; margin: 0 0 0 9px; vertical-align: middle; }
-		} // nav
-	}
-} // header
-#main { min-height: 600px;
-	.intro-banner {
-		padding: 20px;
-		background-color: #1B1B1B;
-		color: #FFF;
-		position: relative;
-		#mixin > .shadow(2px 2px 8px 0, #444, false);
-		.border-radius(3px);
-		.college-branding {
-			height: 63px;
-			overflow: hidden;
-			img { margin-top: -6px; }
-			// &[data-affil=default] { img { margin: -588px 0 0 0; } }
-			// &[data-affil=system] { img { margin: -588px 0 0 0; } }
-			// &[data-affil=manoa] { img { margin: -478px 0 0 0; } }
-			// &[data-affil=hcc] { height: 86px; img { margin: -702px 0 0 0; } }
-			// &[data-affil=kcc] { height: 86px; img { margin: -702px 0 0 0;} }
-		}
-		hr { border-top: 1px solid #050505; border-bottom: none; background-color: #202020; margin: 10px -20px 20px -20px; }
-		h1 { font-size: 51px; font-weight: normal; margin: 11px 0; } // Course Number
-		h2 { font-weight: normal; color: @gray; } // Course Name
-		img { margin: 10px 0 0 0; }
-		&.full-background {
-			background: none;
-			min-height: 543px;
-			img.full-background-image {
-				position: absolute;
-				z-index: -1;
-				top: 0;
-				left: 0;
-				margin: 0;
-			}
-		}
-	}
-	#inline-intro-banner {
-		h1 { font-size: 51px; font-weight: normal; margin: 11px 0; } // Course Number
-		h2 { font-weight: normal; color: @gray; } // Course Name
-	}
-	.no-content {
-		//height: 200px;
-		height: 100%;
-		box-sizing:border-box;
-		-moz-box-sizing:border-box; /* Firefox */
-		-webkit-box-sizing:border-box; /* Safari */
-		padding: 20px 15px;
-		text-align: center;
-		//border: 4px dashed #CCC;
-		font-size: 16px;
-		color: @gray;
-		background-color: @grayLighter;
-		.box-shadow(inset 0 1px 8px rgba(0,0,0,.5));
-		.border-radius(4px); 
-		span.plus { display: block; clear: both; font-size: 120px; line-height: 0; margin: 35px 0 48px; }
-		a {
-			color: @white;
-			margin: 10px 0;
-			&.create-new { margin: 12px 0; color: @grayDark; font-size: 27px; line-height: 1.2; display: block; clear: both; margin: 0 0 20px 0;
-				&:hover { text-decoration: none; color: @white; }
-			}
-		}
-	}
-	a.edit-post-link {
-		min-height: 0;
-		width: 25px;
-		height: 25px;
-		display: none;
-		position: absolute;
-		top: 7px;
-		right: 10px;
-		text-indent: -9999px;
-		background: url('../images/edit-gear.png') no-repeat;
-	}
-	#content {
-		.modules { // Module Page
-			h1.entry-title { margin: 0 0 7px 0; float: left; clear: none; }
-			span.moduleCount { font-size: 36px; line-height: 40px; float: left; }
-		}
-		span.moduleCount { color: @grayLight; font-size: 16px; }
-		h1.entry-title { margin: 2px 0 7px }
-		.entry-content {
-			min-height: 300px;
-			// Content typography
-			h1 { font-size: 30px; line-height: 40px; }
-			h2 { font-size: 24px; line-height: 40px; }
-			h3 { font-size: 18px; line-height: 40px; }
-			blockquote { border-left: 5px solid #CCC; }
-			iframe { margin: 10px 0; }
-		}
-	}
-	#secondary {
-		h3.sidebar-nav-title {
-			margin: 0;
-			padding: 3px 15px 5px;
-			color: @white;
-			background-color: @grayDark;
-			font-weight: normal;
-			a { color: @white; }
-		}// h3.sidebar-nav-title
-		ol.lessons {
-			list-style: none;
-			margin: 0;
-			padding: 0; 
-			li.lesson {
-				&.no-content {
-					margin: 10px 0 0 0;
-					a { display: inline; padding: 5px; }
-				}
-				a.lesson-link { display: block;	background-color: @gray; padding: 15px; color: @white;
-					&.currentLesson { .box-shadow(inset 0 1px 8px rgba(0,0,0,.8)); }
-					&:hover { text-decoration: none; .box-shadow(inset 0 1px 8px rgba(0,0,0,.4)); }
-					&:active { .box-shadow(inset 0 1px 8px rgba(0,0,0,.8)); }
-				}
-			} // li.lesson
-		} // ul.lessons
-	} // #secondary
-	footer.entry-meta {
-		margin: 0;
-		border: none;
-		ol.pager {
-			border-top: 1px solid #CCC;
-			padding-top: 20px;
-			margin-top: 0;
-			li {
-				a {background-color: #3A87AD; color: @white;
-					&:hover { background-color: #296887; }
-				}
-			}
-		}
-	}
-}
-footer {
-	margin: 10px 0 0 0;
-	&#colophon { background-color: @grayLighter; padding: 0;
-		.container { margin-top: 15px; }
-	}
-}
-
-// Course Template Styles: Modules & Lessons
-body.modules-lessons {
-	// FSHN
-	&.single-layout {
-		#main { // Increase specificity
-			ol.modules {
-				margin: 0;
-				li.module {
-						list-style: none;
-						margin-bottom: 20px;
-						background-color: @gray;
-						position: relative;
-						overflow: hidden;
-						#mixin > .shadow(1px 0px 9px 0, #888, false);
-						.border-radius(3px);
-					a.edit-post-link { display: none; min-height: 0; }
-					& > a { color: @white; display: block; min-height: 184px; padding: 0 0 10px 0; &:hover { text-decoration: none; }
-						.module-count { padding: 10px 15px; background-color: @grayDarker; }
-						.module-title { font-weight: normal; font-size: 22px; margin: 10px 15px; line-height: 1.3; display: block; }
-						.module-image { margin: 10px 15px; max-height: 128px; overflow: hidden; }
-						.module-content { margin: 10px 15px; }
-					}
-					&.last { background: none; .box-shadow(inset 0 1px 8px rgba(0,0,0,.5)); } // Clear background color for "+ Content" list item
-					.no-content {
-						padding: 50px 15px 15px;
-						a { min-height: 0; margin: 20px 0 22px 0; }
-					}
-				}
-			}
-		}
-	} // .single-layout
-
-	// PEPS
-	&.nested-layout {
-		#main {
-			ol.modules {
-				margin: 0;
-				li.module { list-style: none; margin: 0 0 20px 0; color: @gray; display: block; min-height: 184px; position: relative;
-					.module-count { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; position: absolute; width: 538px; }
-					.module-image { position: absolute; z-index: -1; background-color: @grayLighter; color: @gray; width: 568px; height: 100%; overflow: hidden; 
-						img { position: absolute; z-index: -1; width: 100%; }
-						.module-image-placeholder {
-							position: absolute;
-							z-index: -1;
-							width: 200px;
-							height: 98px;
-							right: 32px;
-							top: 62px;
-							text-align: center;
-							background: url('../images/image-icon.png') center -5px no-repeat;
-							padding: 18px 0 0 0;
-						}
-					}
-					.module-content-wrapper {
-						background: url('../images/bg-transparent-80.png') repeat-y;
-						max-width: 278px;
-						min-height: 122px;
-						margin: 40px 0 0 0;
-						padding: 12px 15px 10px 15px;
-						hr { border-top: none; border-bottom: none; }
-						.module-title {
-							font-weight: normal;
-							font-size: 22px;
-							line-height: 1.3;
-							margin: 0 0 10px 0;
-							a { color: #FFF; }
-						}
-						.module-content { margin: 10px 0 0; color: #FFF;
-							a { color: @linkColor; }
-						}
-					}
-					ol.lessons {
-						margin: 0;
-						li.lesson { list-style: none; position: relative;
-							a { color: @white;  }
-							a.edit-post-link { top: 0; right: 0; }
-						}
-					}
-				}
-			}
-		}
-	} // .nested-layout
-} // body.modules-lessons
-
-// Course Template Styles: Units, Modules & Lessons
-body.units-modules-lessons {
-	#main { // Increase specificity
-		ol.units {
-			margin: 0;
-			li.unit {
-				list-style: none;
-				margin: 0 0 20px 0;
-				color: @gray;
-				display: block;
-				min-height: 184px;
-				background-color: @grayLighter;
-				overflow: hidden;
-				#mixin > .shadow(1px 0px 9px 0, #888, false);
-				.border-radius(3px);
-				.unit-title-wrapper { padding: 10px 15px; color: @grayLighter; background-color: @grayDarker; overflow: hidden;
-					.unit-count { float: left; margin: 0 10px 0 0; }
-					.unit-title { font-weight: normal; font-size: 18px; line-height: 20px; margin: 0px; float: left; clear: none; }
-				}
-				&.last { background: none; .box-shadow(inset 0 1px 8px rgba(0,0,0,.5)); padding: 0; } // Clear background color for "+ Content" list item
-			}
-		}
-		ol.modules {
-			overflow: hidden;
-			margin: 10px 10px 0 10px;
-			li.module { list-style: none; background-color: @gray; position: relative; min-height: 250px; .border-radius(3px); margin-bottom: 10px; overflow: hidden;
-				a.edit-post-link { display: none; min-height: 0; z-index: 3; }
-				a { color: @white; min-height: 184px; &:hover { text-decoration: none; }
-					.module-title-wrapper {
-						position: absolute; z-index: 2; width: 240px;
-						padding: 10px 15px; background: url('../images/bg-transparent-80.png') repeat-y;
-						.module-count {  }
-						.module-title { font-weight: normal; font-size: 22px; line-height: 1.3; display: block; }
-					}
-					.module-image {
-						height: 100%;
-						background: url('../images/notToSize.jpg');
-						overflow: hidden;
-						max-width: none;
-						.module-image-placeholder { position: absolute; background: url('../images/image-icon.png') center 45px no-repeat #555; height: 100%; padding: 170px 15px 0; text-align: center; }
-					}
-					.module-content { margin: 10px 15px; }
-				}
-				&:nth-child(3n+1) { margin-left: 0; }
-				&.last { background: none; } // Clear background color for "+ Content" list item
-				.no-content {
-					height: 100%;
-					box-sizing:border-box;
-					-moz-box-sizing:border-box; /* Firefox */
-					-webkit-box-sizing:border-box; /* Safari */
-					a { min-height: 0; margin: 28px 0 22px 0; }
-				}
-			}
-		}
-	}
-}
-
-/**
- * Media Queries
- */
-
-// And Beyond...
-@media (min-width: 1200px) {
-	#main {
-		.intro-banner {
-			.college-branding { background-size: auto; }
-		}
-	}
-	body.modules-lessons {
-		&.single-layout {
-			ol.modules li.module {
-				&:nth-child(1) {
-					display: none;
-					#inline-intro-banner { display: none; .border-radius(3px); }
-				}
-				&:nth-child(3n+2) { margin-left: 0; }
-			}
-		}
-	}
-}
-
-// Largest
-@media (max-width: 1200px) and (min-width: 979px) {
-	#main {
-		.intro-banner {
-			.college-branding { height: 56px; }
-			h1 { font-size: 48px; }
-		}
-	}
-	body.modules-lessons {
-		&.single-layout {
-			#main {
-				ol.modules li.module {
-					&:nth-child(1) {
-						display: none;
-						#inline-intro-banner { display: none; }
-					} //#inline-intro-banner
-					&:nth-child(3n+2) { margin-left: 0; }
-				}
-			}
-		}
-	} // body.modules-lessons
-	body.units-modules-lessons {
-		#main {
-			ol.modules {
-				li.module a {
-					.module-title-wrapper { width: 186px; }
-				}
-			}
-		}
-	} // body.units-modules-lessons
-}
-
-// Normal
-@media (max-width: 979px) and (min-width: 768px) {
-	#navbar {
-		.navbar-inner { padding: 0; }
-	}
-	#main {
-		.intro-banner {
-			.college-branding { height: 56px; }
-			h1 { font-size: 45px; }
-		}
-		//#secondary { display: none; }
-		footer { width: 100%; }
-	}
-	body.home.modules-lessons {
-		&.single-layout {
-			#main {
-				#intro-banner { display: none; }
-				#inline-intro-banner { width: 100%; height: 100%; }
-				#primary { width: 100%; margin: 0;
-					ol.modules li.module {
-						&:nth-child(3n+1) { margin-left: 0; }
-					}
-				}
-			}
-		}
-		&.nested-layout {
-			#main { min-width: 830px; }
-			#intro-banner {
-				min-width: 240px; // Prevent percentage shrinking (basically, disabling responsiveness)
-			}
-			#primary {
-				max-width: 568px;
-			}
-		}
-	} // body.modules-lessons
-	body.home.units-modules-lessons {
-		#main {
-			#primary {
-				width: 720px;
-				margin: 0 auto;
-				float: none;
-			}
-			#intro-banner {
-				display: none;
-			}
-			ol.modules {
-				li.module a {
-					.module-title-wrapper { width: 193px; }
-				}
-			}
-		}
-	} // body.units-modules-lessons
-} // @media max: 979, min: 768px;
-
-// Tablet
-@media (min-width: 480px) and (max-width: 768px) {
-	#navbar {
-		.navbar-inner { padding: 0; }
-	}
-	#main {
-		.intro-banner {
-			h1 { font-size: 42px; }
-		}
-		#secondary { display: none; }
-	}
-	// Sticky Footer Adjustments
-	#main { padding-bottom: 96px; }
-	footer#colophon {
-		margin-top: -96px; height: 95px;
-		margin-left: -20px;
-		margin-right: -20px;
-		padding-left: 20px;
-		padding-right: 28px;
-	}
-	// end Sticky Footer Adjustments
-	body.modules-lessons {
-		&.single-layout {
-			#intro-banner { display: none; }
-			#inline-intro-banner { width: 100%; height: 100%; }
-			#primary { width: 100%; }
-			ol.modules li.module {
-				width: 47%;
-				float: left;
-				&:nth-child(2n+2){ margin-left: 15px; }
-			}
-		}
-		&.nested-layout {
-			#main { min-width: 830px; }
-			#intro-banner {
-				max-width: 240px; // Prevent percentage shrinking (basically, disabling responsiveness)
-			}
-			#primary {
-				max-width: 568px;
-			}
-		}
-	}
-	body.units-modules-lessons {
-		#main {
-			#intro-banner { display: none; }
-			ol.modules {
-				li.module a {
-					.module-title-wrapper { width: 100%; }
-					.module-image {
-						.module-image-placeholder {
-							width: 100%;
-						}
-					}
-				}
-			}
-		}
-	}
-}
-
-// Phones
-@media (max-width: 480px) {
-	#navbar {
-		.navbar-inner { padding: 0; }
-	}
-	#main {
-		#secondary { display: none; }
-		footer {
-			.pager {
-				margin: 0;
-				a { float: left; margin-bottom: 5px; }
-			}
-		}
-	}
-	// Sticky Footer Adjustments
-	#main { padding-bottom: 96px; /* Must be the same height as the footer */ }
-	//footer#colophon { position: relative;  clear: both; }
-	footer#colophon {
-		margin-top: -96px; height: 95px;
-		margin-left: -20px;
-		margin-right: -20px;
-		padding-left: 20px;
-		padding-right: 28px;
-	}
-	// end Sticky Footer Adjustments
-	.module-image { display: none; }
-	body.modules-lessons.single-layout {
-		#intro-banner { display: none; }
-		#inline-intro-banner { width: 100%; height: 100%; }
-		#primary { width: 100%; margin: 0; }
-		ol.modules li.module {
-			width: 100%;
-		}
-	}
-}
-
-@media (max-width: 320px) {
-	// Sticky Footer Adjustments
-	#main { padding-bottom: 96px; /* Must be the same height as the footer */ }
-	//footer#colophon { position: relative;  clear: both; }
-	footer#colophon {
-		margin-top: -96px; height: 95px;
-		margin-left: -20px;
-		margin-right: -20px;
-		padding-left: 20px;
-		padding-right: 28px;
-	}
-	// end Sticky Footer Adjustments
-}
-
-
-// Course Template Styles: Quick Fixes
-// FIX: Override some call somewhere that is miscalculating the width
-// of containers at this media query
-@media (max-width: 979px) and (min-width: 768px) {
-	.container {
-		width: auto;
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-}
+/* Bedrock Styles */
