--- a/inc/bootstrap/less/responsive-767px-max.less
+++ b/inc/bootstrap/less/responsive-767px-max.less
@@ -17,9 +17,6 @@
     margin-left: -20px;
     margin-right: -20px;
   }
-  // Hide Navbar Description
-  .navbar .description { display: none; }
-
   // Remove padding on container given explicit padding set on body
   .container-fluid {
     padding: 0;
@@ -61,6 +58,7 @@
   }
   // Make all grid-sized elements block level again
   [class*="span"],
+  .uneditable-input[class*="span"], // Makes uneditable inputs full-width when using grid sizing
   .row-fluid [class*="span"] {
     float: none;
     display: block;
@@ -72,6 +70,9 @@
   .row-fluid .span12 {
     width: 100%;
     .box-sizing(border-box);
+  }
+  .row-fluid [class*="offset"]:first-child {
+    margin-left: 0;
   }
 
   // FORM FIELDS
@@ -106,7 +107,8 @@
     right: 20px;
     width: auto;
     margin: 0;
-    &.fade.in { top: auto; }
+    &.fade  { top: -100px; }
+    &.fade.in { top: 20px; }
   }
 
 }
@@ -156,6 +158,20 @@
       padding-left: 10px;
       padding-right: 10px;
     }
+  }
+
+  // Medias
+  // Reset float and spacing to stack
+  .media .pull-left,
+  .media .pull-right  {
+    float: none;
+    display: block;
+    margin-bottom: 10px;
+  }
+  // Remove side margins since we stack instead of indent
+  .media-object {
+    margin-right: 0;
+    margin-left: 0;
   }
 
   // Modals
