--- a/inc/css/resets.css
+++ b/inc/css/resets.css
@@ -1,3 +1,11 @@
+/*
+Resetting and rebuilding styles have been helped along thanks to the fine work of
+Eric Meyer http://meyerweb.com/eric/tools/css/reset/index.html
+along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
+and Blueprint http://www.blueprintcss.org/
+*/
+
+
 /* =Reset
 -------------------------------------------------------------- */
 
