--- a/inc/less/bedrock-variables.less
+++ b/inc/less/bedrock-variables.less
@@ -60,6 +60,22 @@
 @headingsFontWeight:    bold;    // instead of browser default, bold
 @headingsColor:         inherit; // empty to use BS default, @textColor
 
+// Component sizing
+// -------------------------
+// Based on 14px font-size and 20px line-height
+
+@fontSizeLarge:         @baseFontSize * 1.25; // ~18px
+@fontSizeSmall:         @baseFontSize * 0.85; // ~12px
+@fontSizeMini:          @baseFontSize * 0.75; // ~11px
+
+@paddingLarge:          11px 19px; // 44px
+@paddingSmall:          2px 10px;  // 26px
+@paddingMini:           0 6px;   // 22px
+
+@baseBorderRadius:      4px;
+@borderRadiusLarge:     6px;
+@borderRadiusSmall:     3px;
+
 // Tables
 // -------------------------
 @tableBackground:                   transparent; // overall background-color
@@ -71,7 +87,7 @@
 // -------------------------
 @btnBackground:                     @white;
 @btnBackgroundHighlight:            darken(@white, 10%);
-@btnBorder:                         #bbb;
+@btnBorder:                         #ccc;
 
 @btnPrimaryBackground:              @linkColor;
 @btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
@@ -91,14 +107,15 @@
 @btnInverseBackground:              #444;
 @btnInverseBackgroundHighlight:     @grayDarker;
 
-
 // Forms
 // -------------------------
 @inputBackground:               @white;
 @inputBorder:                   #ccc;
-@inputBorderRadius:             3px;
+@inputBorderRadius:             @baseBorderRadius;
 @inputDisabledBackground:       @grayLighter;
 @formActionsBackground:         #f5f5f5;
+@inputHeight:                   @baseLineHeight + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
+
 
 // Dropdowns
 // -------------------------
@@ -109,15 +126,14 @@
 
 @dropdownLinkColor:             @grayDark;
 @dropdownLinkColorHover:        @white;
-@dropdownLinkColorActive:       @dropdownLinkColor;
+@dropdownLinkColorActive:       @white;
 
 @dropdownLinkBackgroundActive:  @linkColor;
 @dropdownLinkBackgroundHover:   @dropdownLinkBackgroundActive;
 
-
-
 // COMPONENT VARIABLES
 // --------------------------------------------------
+
 
 // Z-index master list
 // -------------------------
@@ -133,8 +149,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          @pathToBootstrapImageDir;
-@iconWhiteSpritePath:     @pathToBootstrapImageDir;
+@iconSpritePath:          @pathToBootstrapImageDir"/glyphicons-halflings.png";
+@iconWhiteSpritePath:     @pathToBootstrapImageDir"/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
@@ -160,6 +176,7 @@
 // Navbar
 // -------------------------
 @navbarCollapseWidth:             979px;
+@navbarCollapseDesktopWidth:      @navbarCollapseWidth + 1;
 
 @navbarHeight:                    40px;
 @navbarBackgroundHighlight:       #ffffff;
@@ -200,6 +217,7 @@
 @paginationBackground:                #fff;
 @paginationBorder:                    #ddd;
 @paginationActiveBackground:          #f5f5f5;
+
 
 
 // Hero unit
@@ -258,14 +276,14 @@
 // 986px/966px: 16col, 51px, 10px; http://robkellas.com/980-grid-system/
 // 1200px/1180px: 15col, 60px, 20px | 995px/955px: 15col, 45px, 20px
 
-@gridColumns:             15;
-@gridColumnWidth:         45px;
+@gridColumns:             12;
+@gridColumnWidth:         60px;
 @gridGutterWidth:         20px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // 1200px min
-@gridColumnWidth1200:     60px;
-@gridGutterWidth1200:     20px;
+@gridColumnWidth1200:     70px;
+@gridGutterWidth1200:     30px;
 @gridRowWidth1200:        (@gridColumns * @gridColumnWidth1200) + (@gridGutterWidth1200 * (@gridColumns - 1));
 
 // 768px-979px
