Update child theme

--- a/samplechildtheme/style.css
+++ b/samplechildtheme/style.css
@@ -1,14 +1,10 @@
 /*
-Theme Name: DCDC Course Child - XYZ 123
-Theme URI: http://hawaii.edu/coe/dcdc/
-Author: Justin Hedani, Dr. Paul Ryan and the Automattic Team
-Author URI: http://hawaii.edu/coe/dcdc/
-Description: The supreme course creation tool designed to make teaching online just as hassle free as teaching face-to-face.
-Template: wp-theme-course-parent
+Theme Name: Diamond - Bedrock Child Theme
+Author: Justin Hedani
+Description: Finding diamonds take some skill. Reap your rewards...
 Version: 1.0
 License: GNU General Public License
 License URI: license.txt
-Tags:
 
 Usage Notes:
 Please read the documentation on how to use this child theme (README.md)
