--- a/inc/css/bedrock-bootstrap.css
+++ b/inc/css/bedrock-bootstrap.css
@@ -1,5 +1,5 @@
 /*!
- * DCDC Bootstrap v2.1.1
+ * Bedrock Bootstrap v2.1.1
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
