--- a/inc/less/bedrock-bootstrap.less
+++ b/inc/less/bedrock-bootstrap.less
@@ -1,5 +1,5 @@
 /*!
- * DCDC Bootstrap v2.1.1
+ * Bedrock Bootstrap v2.1.1
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -11,7 +11,6 @@
 // Core variables and mixins
 @import "bedrock-variables.less"; // Replace default variables
 @import "../bootstrap/less/mixins.less";
-
 
 // CSS Reset
 @import "../bootstrap/less/reset.less";
