Register parent theme template in samplechildtheme (doh!)

--- a/samplechildtheme/style.css
+++ b/samplechildtheme/style.css
@@ -2,9 +2,10 @@
 Theme Name: Diamond - Bedrock Child Theme
 Author: Justin Hedani
 Description: Finding diamonds take some skill. Reap your rewards...
-Version: 1.0
 License: GNU General Public License
 License URI: license.txt
+Template: bedrock
+Version: 1.1
 
 Usage Notes:
 Please read the documentation on how to use this child theme (README.md)
