Ensure glyphicons are referenced properly

--- a/inc/less/bedrock-variables.less
+++ b/inc/less/bedrock-variables.less
@@ -149,8 +149,9 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          @pathToBootstrapImageDir"/glyphicons-halflings.png";
-@iconWhiteSpritePath:     @pathToBootstrapImageDir"/glyphicons-halflings-white.png";
+
+@iconSpritePath:          "@{pathToBootstrapImageDir}/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "@{pathToBootstrapImageDir}/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
