Update base theme to perform better; need to tweak childtheme a bit

--- a/inc/less/style.less
+++ b/inc/less/style.less
@@ -6,6 +6,8 @@
 =================================
 */
 
+/* Temp! */
+#main { background-color: royalblue; }
 
 
 /*
@@ -49,7 +51,7 @@ footer#colophon {
 
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 979px) {
-  #main { padding: 0; }
+  //#main { padding: 0; }
 }
 
 @media (max-width: 767px) {
@@ -74,17 +76,12 @@ footer#colophon {
 
 // Desktop & Below
 @media (max-width: 979px) {  
-  .container { padding: 0 20px; }
+
 }
 
 // Tablets & Below
 @media (max-width: 767px) {
-  .navbar-fixed-top, // The "All-important Navbar Fix"
-  .navbar-fixed-bottom,
-  .navbar-static-top {
-    //margin-left: 0;
-    //margin-right: 0;
-  }
+
 }
 
 // Phones & Below
