--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -3,6 +3,10 @@
 ===== Default Global styles =====
 =================================
 */
+/* Temp! */
+#main {
+  background-color: royalblue;
+}
 /*
 ================================
 ===== Sticky Footer styles =====
@@ -44,9 +48,7 @@ footer#colophon .container .site-info {
 }
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 979px) {
-  #main {
-    padding: 0;
-  }
+  
 }
 @media (max-width: 767px) {
   footer#colophon {
@@ -65,9 +67,7 @@ footer#colophon .container .site-info {
   
 }
 @media (max-width: 979px) {
-  .container {
-    padding: 0 20px;
-  }
+  
 }
 @media (max-width: 767px) {
   
