Update samplechildtheme's style.css to default theme name to Diamond

--- a/samplechildtheme/style.css
+++ b/samplechildtheme/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Kaniela
+Theme Name: Diamond
 Author: Justin Hedani
 Description: Finding diamonds take some skill. Reap your rewards...
 License: GNU General Public License
