Update samplechildtheme structure and references.

--- a/samplechildtheme/inc/less/diamond-style.less
+++ b/samplechildtheme/inc/less/diamond-style.less
@@ -1,5 +1,3 @@
-/*
-Diamond Specific Styles
-*/
-
-@import "../../bedrock/inc/less/bedrock-variables.less"; // Replace this line with your new variables, if you like.
+/**
+ * Diamond Specific Styles
+ */
